--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .html,body { 
-    background: linear-gradient(to top, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0), rgba(250, 250, 250, 0.4)), url("img/bg.jpg");
+    background: linear-gradient(to top, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0), rgba(250, 250, 250, 0.4)), url("bg.jpg");
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
